<resources>
    <string name="app_name">PersonaFren</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="e_mail">E-mail</string>
    <string name="forgotpwd">忘記密碼</string>
    <string name="login"><u>登入</u></string>
    <string name="signup"><u>註冊</u></string>
    <string name="submit">送出</string>
    <string name="birthday">生日</string>
    <string name="grnder">性別</string>
    <string name="Ok">確定</string>
    <string-array name="select_gender">
        <item>性別</item>
        <item>男性</item>
        <item>女性</item>
        <item>秘密</item>
    </string-array>
    <string name="condition">篩選條件</string>
    <string name="personalInformation">個人資料</string>
    <string name="personalityTest">人格測驗</string>
    <string name="details">個人數據</string>

</resources>
